# question-answer-api-rust

./: Cargo.toml  README.md  docker-compose.yml  insomnia-api-calls.json
migrations/: 20230515005744_setup.down.sql  20230515005744_setup.up.sql
src/: cors.rs  main.rs  models.rs
src/handlers/: answer.rs  mod.rs  private.rs  question.rs
src/persistence/: answer_dao.rs  mod.rs  question_dao.rs
