[package]
name = "question-answer-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
rocket = { version="0.5.0-rc.2", features=["json"] }
chrono = "0.4.24"
